# FedCAD

./: .gitignore  .wandb_config  README.md  final_model.pt  plots.ipynb  plots_final.ipynb  pyproject.toml  run_experiments.ipynb  run_sweep.py  sweep_config.yaml  train_central.py  wandb_runs_export.csv
FL4ME/: __init__.py  client_app.py  server_app.py
FedCAD/: __init__.py  client_app.py  plots.ipynb  server_app.py  task.py
dasecproj/: README.md  pyproject.toml
dasecproj/dasecproj/: __init__.py  client_app.py  server_app.py  task.py
models/: final_model_centralized.pt
