# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FL4ME"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.23.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "numpy<2.0.0",
    "wandb",
    "medmnist",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "zoematr"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "FL4ME.server_app:app"
clientapp = "FL4ME.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 10
fraction-train = 0.5
local-epochs = 3
lr = 0.01
noise-multiplier = 0.1
clipping-norm = 0.5
num-sampled-clients = 5
proximal-mu = 0.01

# Strategy selection (set one to true, if none are true FedAvg is used)
fedprox = false
fedprox-dp = false
use_wandb = true

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2
options.backend.client-resources.num-gpus = 0.0

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
